Source/WebCore: VoiceOver cannot navigate the iTunes album view table https://bugs.webkit.org/show_bug.cgi?id=62335

Reviewed by David Kilzer.

This is a regression from https://bugs.webkit.org/show_bug.cgi?id=57463.
Part of that patch made a change so that an ARIA table will only look at it's children and grandchildren
for possible rows. That however, doesn't allow arbitrary hierarchies to work with ARIA, like in iTunes album view.

Test: platform/mac/accessibility/aria-grid-with-strange-hierarchy.html

* accessibility/AccessibilityARIAGrid.cpp:
(WebCore::AccessibilityARIAGrid::addChild):
(WebCore::AccessibilityARIAGrid::addChildren):
* accessibility/AccessibilityARIAGrid.h:

LayoutTests: VoiceOver cannot navigate the itunes album view table
https://bugs.webkit.org/show_bug.cgi?id=62335

Reviewed by David Kilzer.

* platform/mac/accessibility/aria-grid-with-strange-hierarchy-expected.txt: Added.
* platform/mac/accessibility/aria-grid-with-strange-hierarchy.html: Added.



Canonical link: https://commits.webkit.org/78209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88830 268f45cc-cd09-0410-ab3c-d52691b4dbfc